# Bewise_Test_task-2

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py
app/configuration/routes/: __init__.py
app/database/: __init__.py  session.py  settings.py
app/database/migrations/: env.py
app/database/migrations/versions/: 55a7f5462204_create_table.py  7037cd2ade7b_update_table_audio_file.py  7f170713b917_update_table_audio_file.py  80befd7bbc1c_create_table.py  cd72d79cab10_update_table_audio_file.py
app/database/tables/: models.py  tables.py
app/internal/: __init__.py
app/internal/api_v1/: dependencies.py  handlers.py  schemas.py
app/internal/pages/: router.py
app/internal/templates/: base.html  index.html
app/repositories/: audio.py  auth.py
app/services/audio/: __init__.py  audio.py
app/services/auth/: __init__.py  auth.py  manager.py  urls.py  utils.py
app/utils/: __init__.py  repository.py  wrapper.py
src/: .env.example  alembic.ini  main.py
src/api/: handlers.py  optional.py  schemas.py  urls.py  utils.py
src/db/: dal.py  manager.py  models.py  session.py  tables.py
src/migrations/: env.py
tests/: conftest.py  test_endpoints.py
